force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Compensating_Control__c.field-meta.xml
<CustomField>
    <fullName>Compensating_Control__c</fullName>
    <label>Compensating Control</label>
    <length>1024</length>
    <type>LongTextArea</type>
    <description
  >An administrator-recorded mitigation that already reduces this risk without resolving the underlying condition (e.g. "access reviewed quarterly by Security") — surfaced alongside Risk Accepted status so the acceptance reasoning isn't lost.</description>
</CustomField>