force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Component_Key__c.field-meta.xml
<CustomField>
    <fullName>Component_Key__c</fullName>
    <label>Component Key</label>
    <type>Text</type>
    <length>255</length>
    <description
  >The graph Node_Key__c, record Id, or other stable identifier of the affected component — never a raw label, since labels can change while identity must not.</description>
</CustomField>