force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Component_Label__c.field-meta.xml
<CustomField>
    <fullName>Component_Label__c</fullName>
    <label>Component Label</label>
    <type>Text</type>
    <length>255</length>
    <description
  >Human-readable name of the affected component — shown to the administrator instead of a raw key/Id.</description>
</CustomField>