force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Text</type>
    <length>120</length>
    <description
  >The typeKey of the affected component (e.g. SalesforceMetadata.CustomObject) or a Standard/Custom/Managed classification string — whatever the owning rule finds most useful to disclose.</description>
</CustomField>