force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Compute_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Compute_Run_Id__c</fullName>
    <label>Compute Run Id</label>
    <type>Text</type>
    <length>36</length>
    <description
  >Identifier of the scan run that most recently (re)detected this finding — lets the UI group findings by run and compare runs for the historical-comparison view.</description>
</CustomField>