force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Text</type>
    <length>20</length>
    <description
  >High/Medium/Low — how much the rule author trusts this signal alone (scan coverage, corroboration, known scanner limitations). Never left to the reader to infer from severity alone.</description>
</CustomField>