force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
    <description
  >Administrator-set target date for remediation — drives the Remediation Management workspace's "overdue findings" view.</description>
</CustomField>