force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <description
  >The concrete evidence that caused this finding to be flagged — the specific counts/values observed, never a generic description.</description>
</CustomField>