force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <label>Expected Value</label>
    <type>Text</type>
    <length>255</length>
    <description
  >The configured threshold/expectation the measured value was compared against (e.g. "&lt; 60 fields").</description>
</CustomField>