force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <label>Explanation</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <description
  >Plain-language explanation of what this finding means and why the rule exists.</description>
</CustomField>