force-app/main/default/objects/OI_Org_Health_Finding__c/fields/False_Positive_Justification__c.field-meta.xml
<CustomField>
    <fullName>False_Positive_Justification__c</fullName>
    <label>False Positive Justification</label>
    <length>1024</length>
    <type>LongTextArea</type>
    <description
  >Why an administrator marked this finding False Positive — kept distinct from the general Notes__c field so a False Positive decision always carries its own stated reason, reviewable independently of any other notes on the record.</description>
</CustomField>