force-app/main/default/objects/OI_Org_Health_Finding__c/fields/First_Detected__c.field-meta.xml
<CustomField>
    <fullName>First_Detected__c</fullName>
    <label>First Detected</label>
    <type>DateTime</type>
    <required>true</required>
    <description
  >When this fingerprint was first detected — set once on insert, never overwritten by a later re-scan.</description>
</CustomField>