force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Has_Automatic_Action__c.field-meta.xml
<CustomField>
    <fullName>Has_Automatic_Action__c</fullName>
    <label>Has Automatic Action</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >Reserved for a future guided/automatic remediation action (ProductSpecs.md §11) — always false today; no automatic remediation is implemented in this release, so this only ever gates UI that does not yet exist.</description>
</CustomField>