force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Is_Managed__c.field-meta.xml
<CustomField>
    <fullName>Is_Managed__c</fullName>
    <label>Is Managed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >True when the affected component belongs to a managed package — remediation guidance must not tell an administrator to directly edit metadata they cannot modify.</description>
</CustomField>