force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Last_Detected__c.field-meta.xml
<CustomField>
    <fullName>Last_Detected__c</fullName>
    <label>Last Detected</label>
    <type>DateTime</type>
    <required>true</required>
    <description
  >When this fingerprint was most recently re-detected — refreshed on every scan that still finds the condition true; stops advancing once the finding resolves.</description>
</CustomField>