force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Measured_Value__c.field-meta.xml
<CustomField>
    <fullName>Measured_Value__c</fullName>
    <label>Measured Value</label>
    <type>Text</type>
    <length>255</length>
    <description
  >The actual measured value behind this finding (e.g. "142 fields"), kept as display text since units vary by rule.</description>
</CustomField>