force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <label>Namespace</label>
    <type>Text</type>
    <length>40</length>
    <description
  >Managed package namespace prefix of the affected component, blank for this org's own unmanaged metadata.</description>
</CustomField>