force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description
  >Free-text investigator notes — never overwritten by a re-scan, only by an explicit administrator edit.</description>
</CustomField>