force-app/main/default/objects/OI_Org_Health_Finding__c/fields/OI_Diag_Probe__c.field-meta.xml
<CustomField>
    <fullName>OI_Diag_Probe__c</fullName>
    <label>Diag Probe</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>