force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Org_Risk__c.field-meta.xml
<CustomField>
    <fullName>Org_Risk__c</fullName>
    <label>Org Risk</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <description
  >Why this finding matters in THIS org specifically, not metadata health in the abstract — the answer to "why does it matter here."</description>
</CustomField>