force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Potential_Impact__c.field-meta.xml
<CustomField>
    <fullName>Potential_Impact__c</fullName>
    <label>Potential Impact</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <description
  >The concrete damage or operational impact this condition can cause if left unaddressed.</description>
</CustomField>