force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Remediation__c.field-meta.xml
<CustomField>
    <fullName>Remediation__c</fullName>
    <label>Remediation</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <description
  >What the administrator should do next — a realistic, component-specific action, never a generic "review this."</description>
</CustomField>