force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Required_Permission__c.field-meta.xml
<CustomField>
    <fullName>Required_Permission__c</fullName>
    <label>Required Permission</label>
    <type>Text</type>
    <length>80</length>
    <description
  >The custom permission an administrator would need to act on this finding's automatic action, once one exists (see Has_Automatic_Action__c).</description>
</CustomField>