force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Resolution_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Evidence__c</fullName>
    <label>Resolution Evidence</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <description
  >Why this finding is considered resolved — either the auto-resolve note OI_OrgHealthFindingRepository stamps when a re-scan no longer detects the condition, or an administrator's own explanation.</description>
</CustomField>