force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Risk_Acceptance_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Risk_Acceptance_Expiry__c</fullName>
    <label>Risk Acceptance Expiry</label>
    <type>Date</type>
    <description
  >Administrator-set date a Risk Accepted decision should be re-reviewed by. Not enforced by any automation — the Remediation Management workspace and finding drawer surface "accepted risks nearing/past expiry" as a review prompt, never an automatic status change, since only a person can re-affirm or revise an accepted risk.</description>
</CustomField>