force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <label>Rule Id</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <description
  >Stable identifier of the detection rule that raised this finding (e.g. MetadataHealth.HighFieldCount) — distinct from Section_Key__c so one domain can carry several independent rules.</description>
</CustomField>