force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description
  >OI_HealthScoringEngine's combined multi-signal badness score for this finding, 0-100, higher = worse. Null for a rule not yet ported onto the shared scoring engine (ADR-0027 correction) — a null score must never be displayed as zero/healthy.</description>
</CustomField>