force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Score_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Score_Explanation__c</fullName>
    <label>Score Explanation</label>
    <length>1024</length>
    <type>LongTextArea</type>
    <description
  >OI_HealthScoringEngine's one-line "why this severity" summary, naming the top contributing signal(s) — stored verbatim alongside Severity_Contributors_Json__c's full breakdown so the drawer never has to re-derive it from the raw contributor list.</description>
</CustomField>