force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Severity_Contributors_Json__c.field-meta.xml
<CustomField>
    <fullName>Severity_Contributors_Json__c</fullName>
    <label>Severity Contributors JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description
  >JSON-serialized List&lt;OI_HealthScoreContributor&gt; — every signal OI_HealthScoringEngine combined into Score__c/Severity__c, with each one's magnitude, confidence, impact, exposure, and resulting contribution. Powers the finding drawer's "why this severity" breakdown. Refreshed on every re-scan alongside the other evidence fields, never treated as lifecycle data.</description>
</CustomField>