force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>true</default><label
        >Open</label></value>
            <value><fullName>Acknowledged</fullName><default
        >false</default><label>Acknowledged</label></value>
            <value><fullName>In Progress</fullName><default
        >false</default><label>In Progress</label></value>
            <value><fullName>Risk Accepted</fullName><default
        >false</default><label>Risk Accepted</label></value>
            <value><fullName>Resolved</fullName><default>false</default><label
        >Resolved</label></value>
            <value><fullName>False Positive</fullName><default
        >false</default><label>False Positive</label></value>
        </valueSetDefinition>
    </valueSet>
    <description
  >The finding's remediation lifecycle. A re-scan that still detects the same fingerprint never resets this back to Open — only OI_OrgHealthFindingRepository's own auto-resolve path (when the condition disappears) or an explicit administrator action changes it.</description>
</CustomField>