force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description
  >Short, human-readable statement of what was detected — the finding list/drawer headline.</description>
</CustomField>