force-app/main/default/objects/OI_Org_Health_Finding__c/fields/Validation_Steps__c.field-meta.xml
<CustomField>
    <fullName>Validation_Steps__c</fullName>
    <label>Validation Steps</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <description
  >How the administrator can confirm the remediation actually worked, typically by re-running the scan and checking this finding resolves.</description>
</CustomField>